# PEDS

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: automated-testing.yml  generate_documentation.yml
doc/: functional_derivatives.bib  functional_derivatives.tex  problem_description.bib  problem_description.tex
src/: common.py  config.toml  config_1d.toml  config_2d.toml  driver.py  driver_fem_gradient.py  evaluate.py  fem_operators.py  fibres.py  generate_sample_points.py  setup.py  test_diffusion_model.py  test_diffusion_model2d.py  test_diffusion_model_1d.py  test_diffusion_model_2d.py  test_fem_gradient.py  test_interpolation.py  test_qoi.py  train.py  visualise_interpolation_2d.py  visualise_lognormal.py  visualise_lognormal_1d.py  visualise_lognormal_2d.py  visualise_samples2d.py
src/peds/: auxilliary.py  dataset.py  datasets.py  diffusion_model.py  diffusion_model_1d.py  diffusion_model_2d.py  distributions.py  distributions_fibres.py  distributions_lognormal.py  downsampler.py  interpolation_1d.py  interpolation_2d.py  libfibres.cc  lognormal_dataset.py  lognormal_distribution.py  peds_model.py  quantity_of_interest.py
src/tests/: test_diffusion_model_1d.py  test_diffusion_model_2d.py
src/tools/: visualise_lognormal_1d.py  visualise_lognormal_2d.py
tests/: test_diffusion_model_2d.py
